# brezel

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  brezel_8hpp.html  brezel_8hpp_source.html  classbrezel_1_1utils_1_1_device_error-members.html  classbrezel_1_1utils_1_1_device_error.html  classbrezel_1_1utils_1_1_device_error.js  classbrezel_1_1utils_1_1_device_error__coll__graph.map  classbrezel_1_1utils_1_1_device_error__coll__graph.md5  classbrezel_1_1utils_1_1_device_error__inherit__graph.map  classbrezel_1_1utils_1_1_device_error__inherit__graph.md5  classbrezel_1_1utils_1_1_error-members.html  classbrezel_1_1utils_1_1_error.html  classbrezel_1_1utils_1_1_error.js  classbrezel_1_1utils_1_1_error__coll__graph.map  classbrezel_1_1utils_1_1_error__coll__graph.md5  classbrezel_1_1utils_1_1_error__inherit__graph.map  classbrezel_1_1utils_1_1_error__inherit__graph.md5  classbrezel_1_1utils_1_1_expected-members.html  classbrezel_1_1utils_1_1_expected.html  classbrezel_1_1utils_1_1_expected.js  classbrezel_1_1utils_1_1_expected_3_01void_00_01_e_01_4-members.html  classbrezel_1_1utils_1_1_expected_3_01void_00_01_e_01_4.html  classbrezel_1_1utils_1_1_expected_3_01void_00_01_e_01_4.js  classbrezel_1_1utils_1_1_index_error-members.html  classbrezel_1_1utils_1_1_index_error.html  classbrezel_1_1utils_1_1_index_error.js  classbrezel_1_1utils_1_1_index_error__coll__graph.map  classbrezel_1_1utils_1_1_index_error__coll__graph.md5  (+142 more)
.github/workflows/: ci.yml  code-coverage.yml  code-quality.yml  main.yml
cmake/: CompilerSettings.cmake  CompilerWarnings.cmake  Dependencies.cmake  Documentation.cmake  Installation.cmake  Options.cmake  Packaging.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Summary.cmake  Utilities.cmake  Workflow.cmake  brezelConfig.cmake.in  cmake_uninstall.cmake.in
docker/: Dockerfile  docker-compose.yml
docs/: CMakeLists.txt  Doxyfile.in  mainpage.md  modules.dox
include/: brezel.hpp
include/brezel/: brezel.hpp  macros.hpp
include/brezel/core/: concepts.hpp  config.hpp  device.hpp  dtype.hpp  exception.hpp  index.hpp  scalar.hpp  shape.hpp  storage.hpp  tensor.hpp  tensor.inl  tensor_options.hpp  types.hpp
include/brezel/core/error/: base.hpp  categories.hpp  codes.hpp  context.hpp  device_errors.hpp  error.hpp  format_errors.hpp  guards.hpp  result.hpp  runtime_errors.hpp  system_errors.hpp  tensor_errors.hpp
include/brezel/utils/: error.hpp  exception.hpp  expected.hpp  format.hpp  logging.hpp  macros.hpp  utils.hpp
scripts/: build.sh  configure_and_build.sh  docker-dev-shell.sh  format-code.sh  format.sh  setup-dev-environment.sh  setup-vcpkg.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+24 more)
src/: CMakeLists.txt
src/core/: device.cpp  tensor.cpp  types.cpp
tests/: CMakeLists.txt
tests/common/: test_helpers.hpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  device_test.cpp  dtype_test.cpp  expected_test.cpp  scalar_test.cpp  shape_test.cpp  storage_test.cpp  tensor_options.hpp  types_test.cpp
